# phatnoise.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  Vagrantfile  vagrant.yml
ansible/: vagrant.yml
ansible/roles/rust/handlers/: main.yml
ansible/roles/rust/tasks/: main.yml
ansible/roles/rust/vars/: main.yml
src/: data.rs  dms.rs  fsync.rs  lib.rs  library.rs  main.rs  metadata.rs  sync.rs  utils.rs
src/dms/: mod.rs
src/fsync/: mod.rs
src/metadata/: mod.rs  test.rs
src/metadata/test/: fixtures.rs  mod.rs
src/sync/: mod.rs
src/utils/: crypto.rs  fs.rs  media.rs  mod.rs  stringpool.rs  test.rs
test/fixtures/flac/: album.flac  albumartist.flac  artist.flac  composer.flac  genre.flac  style.flac
tools/: list-fixture-tags
vagrant/roles/base/tasks/: main.yml
vagrant/roles/rust/handlers/: main.yml
vagrant/roles/rust/tasks/: main.yml
