[package]
name = "phatnoise"
version = "0.1.0"
authors = [
  "Naftuli Kay <me@naftuli.wtf>"
]

[dependencies]
libc = "0.2.36"
rayon = "1.0.0"
rust-crypto = "0.2.36"
id3 = "0.1.11"
lazy_static = "0.2.2"
log = "0.4.1"
log4rs = "0.8.0"
metaflac = "0.1.8"
num_cpus = "1.8.0"
mp3-duration = "0.1.1"
regex = "0.2.6"
rusoto_polly = "0.31.0"
simplemad = "0.8.1"
threadpool = "1.0"
unicode-casefold = "0.2.0"
walkdir = "1"
