[package]
name = "phatnoise"
version = "0.1.0"
edition = "2018"
authors = [
  "Naftuli Kay <me@naftuli.wtf>"
]

[dependencies]
libc = "0.2"
rayon = "1"
rust-crypto = "0.2"
id3 = "0.5"
lazy_static = "1"
log = "0.4"
log4rs = "0.12"
metaflac = "0.2"
num_cpus = "1"
mp3-duration = "0.1"
regex = "1"
simplemad = "0.9"
unicode-casefold = "0.2"
walkdir = "2"
